--- a/package.json
+++ b/package.json
@@ -10,15 +10,31 @@
   },
   "dependencies": {
     "@expo-google-fonts/lobster": "^0.2.3",
-    "expo": "~52.0.35",
-    "expo-font": "~13.0.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/elements": "^2.2.5",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.8.1",
+    "expo": "~52.0.36",
+    "expo-font": "~13.0.4",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "expo": "^52.0.35"
   },
   "private": true
 }
